Metadata v2.3/src/objects/Doctor__c.object
<CustomObject>
    <fields>
        <fullName>Additional_Specialities__c</fullName>
        <inlineHelpText>Select the additional specialities of the doctor if available</inlineHelpText>
        <label>Additional Specialities</label>
        <picklist>
            <picklistValues>
                <fullName>Autopsy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Surgery</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <scale>0</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Assigned_Parking__c</fullName>
        <inlineHelpText>Enter the number of the parking assigned to the doctor in hospital permises</inlineHelpText>
        <label>Assigned Parking</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bio__c</fullName>
        <inlineHelpText>&quot;A complete Bio Data of the doctor</inlineHelpText>
        <label>Bio</label>
        <length>25000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Blog__c</fullName>
        <inlineHelpText>Enter the UrL of the blog (if any) published by the doctor.</inlineHelpText>
        <label>Blog</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Blog_new__c</fullName>
        <inlineHelpText>Enter the UrL of the blog (if any) published by the doctor.</inlineHelpText>
        <label>Blog@*^*&amp;!%new</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Comission_per_Addmission__c</fullName>
        <inlineHelpText>Enter the percent of commission assigned to the doctor per addmission</inlineHelpText>
        <label>Comission per Addmission</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <description>Date of Birth</description>
        <inlineHelpText>Enter the date of birth</inlineHelpText>
        <label>Date of Birth</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Joining__c</fullName>
        <description>Date of Joining</description>
        <inlineHelpText>Enter the Doctor&apos;s Date of joining</inlineHelpText>
        <label>Date of Joining</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Email Address</description>
        <inlineHelpText>Enter the official Email address</inlineHelpText>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Fixed_Salary__c</fullName>
        <label>Fixed Salary</label>
        <precision>4</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mobile_Number__c</fullName>
        <label>Mobile Number</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <inlineHelpText>Enter the doctor&apos;s name with salutation</inlineHelpText>
        <label>Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Speciality__c</fullName>
        <inlineHelpText>Enter the area the doctor primarily specializes in</inlineHelpText>
        <label>Primary Speciality</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Residence__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if the doctor is a residence.</inlineHelpText>
        <label>Residence</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Short_Description__c</fullName>
        <inlineHelpText>A short description of the doctor as appears on the website</inlineHelpText>
        <label>Short Description</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <label>Doctor</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Doctor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Doctors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>